porting to Java 8